--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        python -m pip install pytest
+        python -m pip install pytest-cov
     - name: Test with pytest
       run: |
-        pytest
+        pytest -s --cov --cov-report html --cov-fail-under 76
